# Erde-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Erde.sln  LICENSE  README.md  build.sh  buildDebug.sh  buildMin.sh  buildNoNative.sh  buildNoVulkan.sh  setupFirstBuild.sh
BulletWrapper/: CMakeLists.txt  README.md
BulletWrapper/Bullet/Bullet3Collision/: CMakeLists.txt
BulletWrapper/Bullet/Bullet3Common/: CMakeLists.txt
BulletWrapper/Bullet/Bullet3Dynamics/: CMakeLists.txt
BulletWrapper/Bullet/Bullet3Geometry/: CMakeLists.txt
BulletWrapper/Bullet/Bullet3OpenCL/: CMakeLists.txt
BulletWrapper/Bullet/Bullet3Serialize/Bullet2FileLoader/: CMakeLists.txt
BulletWrapper/Bullet/BulletCollision/: CMakeLists.txt
BulletWrapper/Bullet/BulletDynamics/: CMakeLists.txt
BulletWrapper/Bullet/BulletInverseDynamics/: CMakeLists.txt
BulletWrapper/Bullet/BulletSoftBody/: CMakeLists.txt
BulletWrapper/Bullet/LinearMath/: CMakeLists.txt
BulletWrapper/include/: Export.h
BulletWrapper/src/: BoxCollisionShape.cpp  CapsuleCollisionShape.cpp  CollisionDispatcher.cpp  CollisionObject.cpp  DbvtBroadphase.cpp  DefaultCollisionConfiguration.cpp  DiscreteDynamicsWorld.cpp  ECollisionConfiguration.cpp  EDistanceFieldCollider.cpp  EDistanceFieldSphereAlgorithm.cpp  MotionState.cpp  Rigidbody.cpp  SequentialConstraintSolver.cpp  SphereCollisionShape.cpp  main.cpp
EApplication/: App.config  Application.cs  Cursor.cs  EApplication.csproj  IApplication.cs  Input.cs  Time.cs
EApplication/Internal/: NativeApplication.cs  OpenTKApplication.cs
EApplication/Properties/: AssemblyInfo.cs
EAudio/: Device.cs  EAudio.csproj
EAudio/Properties/: AssemblyInfo.cs
EBase/: AssetManager.cs  Behaviour.cs  Component.cs  DistanceField.cs  EBase.csproj  FastNoise.cs  GameObject.cs  Gizmos.cs  InternalConsole.cs  LibraryLoader.cs  Maths.cs  OctTree.cs  Reflection.cs  Tools.cs  Transform.cs  Translation.cs  packages.config
EBase/IO/: DriveFileSystem.cs  IFileSystem.cs  PackageFileSystem.cs
EBase/Properties/: AssemblyInfo.cs
EDiscord/: Client.cs  Configuration.cs  DiscordClient.cs  EDiscord.csproj  EnumConverter.cs  Frame.cs  Handshake.cs  UnixEndPoint.cs  User.cs
EDiscord/Client/: InternalClient.cs  UnixClient.cs  WindowsClient.cs
EDiscord/Commands/: CloseCommand.cs  ICommand.cs  PresenceCommand.cs
EDiscord/Message/: CloseMessage.cs  ConnectionEstablishedMessage.cs  ErrorMessage.cs  IMessage.cs  ReadyMessage.cs
EDiscord/Payload/: ArgumentPayload.cs  ClosePayload.cs  EventPayload.cs  IPayload.cs
EDiscord/Properties/: AssemblyInfo.cs
EDiscord/RichPresence/: Assets.cs  Party.cs  RichPresence.cs  Secret.cs  TimeStamp.cs
EGraphics/: BindableContainer.cs  Binding.cs  Camera.cs  ConsoleDisplay.cs  DrawingContainer.cs  EGraphics.csproj  FontCollection.cs  Frustrum.cs  Frustum.cs  GLCommand.cs  GizmoRenderer.cs  Graphics.cs  GraphicsCommand.cs  IGLObject.cs  IGraphics.cs  IGraphicsCommand.cs  IGraphicsObject.cs  IPipeline.cs  IPost.cs  IRenderObject.cs  ModelVertexInfo.cs  Pipeline.cs  PipelineTime.cs
EGraphics/GUI/: Canvas.cs  Element.cs  Image.cs  ScrollView.cs  TextBox.cs  TextField.cs
EGraphics/IO/: ColladaLoader.cs  OBJLoader.cs
EGraphics/Internal/: NativeGraphics.cs  NativePipeline.cs  OpenTKGraphics.cs  OpenTKGraphicsCommand.cs  OpenTKPipeline.cs
EGraphics/Lights/: DirectionalLight.cs  ILight.cs  Light.cs
EGraphics/Properties/: AssemblyInfo.cs
EGraphics/Rendering/: Material.cs  MaterialRenderer.cs  MeshRenderer.cs  Model.cs  Renderer.cs  SkinnedMeshRenderer.cs  Skybox.cs
EGraphics/Shader/: GeometryShader.cs  IProgram.cs  PixelShader.cs  Program.cs  Shaders.cs  VertexShader.cs
EGraphics/Variables/: CubeMap.cs  IModel.cs  ITexture.cs  IUniformBufferObject.cs  Model.cs  MultiRenderTexture.cs  RenderTexture.cs  Skeleton.cs  Texture.cs  UniformBufferObject.cs  UnsignedInt.cs  UnsignedIntGValue.cs
ENative/: CMakeLists.txt
ENative/include/: MonoRuntime.h
ENative/modules/: FindMono.cmake
ENative/src/: MonoRuntime.cpp  main.cpp
ENativeApplication/: CMakeLists.txt  Readme.txt
ENativeApplication/include/: Application.h  Export.h  GeometryShader.h  Graphics.h  Model.h  Pipeline.h  PixelShader.h  Program.h  RenderTexture.h  Shader.h  SwapChain.h  SwapTexture.h  Texture.h  UniformBufferObject.h  VertexShader.h
ENativeApplication/src/: Application.cpp  GeometryShader.cpp  Graphics.cpp  Model.cpp  Pipeline.cpp  PixelShader.cpp  Program.cpp  RenderTexture.cpp  Shader.cpp  SwapChain.cpp  SwapTexture.cpp  Texture.cpp  UniformBufferObject.cpp  VertexShader.cpp
ENativePhysics/: CMakeLists.txt
ENativePhysics/include/: ECollisionConfiguration.h  EDistanceFieldCollider.h  EDistanceFieldConvexAlgorithm.h  EDistanceFieldSphereAlgorithm.h  ENativeDebugDrawer.h
ENativePhysics/src/: BoxCollisionShape.cpp  CapsuleCollisionShape.cpp  CollisionDispatcher.cpp  CollisionObject.cpp  DbvtBroadphase.cpp  DefaultCollisionConfiguration.cpp  DiscreteDynamicsWorld.cpp  ECollisionConfiguration.cpp  EDistanceFieldCollider.cpp  EDistanceFieldConvexAlgorithm.cpp  ENativeDebugDrawer.cpp  MotionState.cpp  Rigidbody.cpp  SequentialConstraintSolver.cpp  SphereCollisionShape.cpp
EPhysics/: CollisionDispatcher.cs  CollisionObject.cs  DiscreteDynamicsWorld.cs  EPhysics.csproj  Engine.cs  IPObject.cs  ISolver.cs  MotionState.cs  PhysicsEngine.cs  PhysicsObject.cs  PhysicsTime.cs  RaycastResult.cs  Rigidbody.cs  Solver.cs
EPhysics/Broadphase/: BroadphaseInterface.cs  DbvtBroadphase.cs
EPhysics/Collider/: BoxCollider.cs  CapsuleCollider.cs  Collider.cs  SphereCollider.cs  (+1 more)
EVoxel/: Chunk.cs  EVoxel.csproj  IGenerator.cs  MarchingCubes.cs  VoxelManager.cs
(+24 files in other folders)
